2007-03-25 tommi@tntnet.org
  - replace semaphore with condition in cxxtools::Pool and make max-size
    of pool settable

2007-03-23 tommi@tntnet.org
  - add error-checking for glob in cxxtools::multifstreambuf

2007-02-20 tommi@tntnet.org

  - fix stupid bug in tcp-class. Stream reported eof when only part of
    data was written.

2007-01-24 tommi@tntnet.org

  - wrappers for fork(2) and pipe(2) and a std::iostream on top of pipe(2)
  - cxxtools::Fdstream: std::iostream for filedescriptors

2007-01-21 tommi@tntnet.org
  - support for udp-broadcast
  - don't throw exception in tcpstream, when connection is closed
    report eof instead

2007-01-15 tommi@tntnet.org

  - make offset in hexdumper settable
  - logging-improvement (don't try to output current logstatement when
    exception occurs during creation of log-message)
  - Condition::timedwait

2006-12-31 tommi@tntnet.org

  - improve eof-handling in socket-class

2006-12-28 tommi@tntnet.org

  - log process-id
  - bugfix in cxxtools::UdpReceiver: adress-length-field was not initialized

2006-12-20 tommi@tntnet.org

  - make constuctor for QueryParams::const_iterator explicit to prevent
    accidentally converting QueryParams-objects into const_iterator

2006-11-22 tommi@tntnet.org

  - make loggers more private and instantiate existing loggers later
  - "putchar" is a macro somewhere - rename member-method to workaround
    this name-conflict

2006-11-20 tommi@tntnet.org

  - fix tcpstream to correctly report end-of-file in all circumstances

2006-09-11 tommi@tntnet.org

  - fixed buffer-overflow in logger when formatting dates

2006-08-10 tommi@tntnet.org

  - new helper-class IConverter for easier usage of iconv(3) and iconvstream

2006-07-27 tommi@tntnet.org

  - fix iconvstream

2006-06-21 tommi@tntnet.org

  - license changed to LGPL

2006-05-24 tommi@tntnet.org

  - fix tcp-client: create socket when known, which to create
    this fixes also problems in running any applications on systems without