@@ -63,13 +63,17 @@ class Hdostream : public std::ostream
 
   public:
     Hdostream()
-      : base_class(&streambuf),
+      : base_class(0),
         streambuf(std::cout.rdbuf())
-    { }
+    {
+      rdbuf(&streambuf);
+    }
     Hdostream(std::ostream& out)
-      : base_class(&streambuf),
+      : base_class(0),
         streambuf(out.rdbuf())
-    { }
+    {
+      rdbuf(&streambuf);
+    }
 
     unsigned getOffset() const         { return streambuf.getOffset(); }
     void setOffset(unsigned offset_)   { streambuf.setOffset(offset_); }
