@@ -54,16 +54,20 @@ namespace cxxtools
 
       public:
         explicit UdpOStream(UdpSender& sender, int flags = 0)
-          : std::ostream(&streambuf),
+          : std::ostream(0),
             sender(0),
             streambuf(sender, flags)
-          { }
+        {
+          rdbuf(&streambuf);
+        }
         UdpOStream(const char* ipaddr, unsigned short int port, bool bcast = false,
             int flags = 0)
-          : std::ostream(&streambuf),
+          : std::ostream(0),
             sender(new UdpSender(ipaddr, port, bcast)),
             streambuf(*sender, flags)
-          { }
+        {
+          rdbuf(&streambuf);
+        }
         ~UdpOStream()
           { delete sender; }
     };
